Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30397

InnoDB crash due to DB_FAIL reported for a corrupted page

    XMLWordPrintable

Details

    Description

      I can connect to MariaDB with HeidiSQL and MySqlConnector, but when I try to view table data (all tables InnoDB) or make a query the MariaDB service crashes.

      I get a popup: "SQL Error (2013): Lost connection to the MySQL server during query."

      From the .err log

      2023-01-12 17:33:30 3 [ERROR] [FATAL] InnoDB: Unknown error Failed, retry may succeed
      230112 17:33:30 [ERROR] mysqld got exception 0x80000003 ;

      Attachments

        1. DX-APP06.err
          5 kB
        2. my.ini
          0.2 kB
        3. mysqld.dmp
          77 kB

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              rgsilver Richard Green
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.